   * Standardize weapon filters, supporting special=, [and], [or], and [not]
     wherever weapons can be filtered.
   * Image path functions again evaluated left-to-right. Fixes bug #20196.
   * Support for [swarm] causing attacks to increase as health decreases.
   * Inactive names and descriptions for abilities and weapon specials will
     default to the active name/description if omitted.
 * Miscellaneous and bug fixes:
   * Fix invalid memory access crash resulting from deleting all saved games
     in the Load Game dialog
   * Redesigned the hotkey preferences dialog
   * Removed two Khalifate leftovers (Hakim portrait and KHALIFATE_NAMES macro)
   * Ambush now works for desert palms and dead great trees (bug #20207)
   * Hex field size and default terrain are wml configurable
   * RCA AI renamed from 'testing' to 'default'
   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
   * Fixed a bug disallowing the left shift and meta key to be detected in
     the hotkeys
   * Added -Wuseless-cast to the CMake pedantic flags.
   * Added -Wc++11-compat to the CMake pedantic flags.
   * Added bzip2 support for savefiles. (new dependency)
   * Fix OOS when observe scenario 2 in a multiplayer campaign (bug #20217).
   * Synchronize underlying_unit_id in MP campaigns (bug #20227)
   * Fixed: Compilation with Boost 1.51.0 (Gentoo bug #440742).
   * Added -Wnoexcept to the CMake pedantic flags.
   * Fixed a rare case where a player could exercise (very) limited control of
     another (human) player's units in a hotseat game.

Version 1.11.0:
 * Add-ons client:
   * The Update Add-ons dialog has been replaced with an alternate view mode
     for the main Add-ons Manager
   * The Add-ons Manager now allows filtering add-ons by installation status
     (all, installed, not installed, upgradable)
   * Add-ons in the Add-ons Manager are initially sorted by title instead of
     the order they were originally uploaded to the server